fix(syntax): more visible comments

--- a/src/assets/styles/derived/_syntax.scss
+++ b/src/assets/styles/derived/_syntax.scss
@@ -3,7 +3,7 @@
 
 // Token colors
 
-$cadet: utils.hsla(180, 19%, 33%, 0.6);
+$cadet: utils.hsla(180, 19%, 40%, 0.6);
 $iris: utils.hsla(231, 52%, 56%);
 $brass: utils.hsla(40, 40%, 41%);
 $vermillion: utils.hsla(0, 57%, 49%);
